using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Layers
{
    
}

public class Animations
{
    public const string Attack = "Attack";
    public const string Hurt = "Hurt";
    public const string Block = "Block";
}

public class Multiplyers
{
    public const int ChanceMultiplyer = 10;
    public const int DamageMultiplyer = 2;
}
